--- a/kubernetes/apps/database/cloudnative-pg/barman-cloud/helmrelease.yaml
+++ b/kubernetes/apps/database/cloudnative-pg/barman-cloud/helmrelease.yaml
@@ -21,7 +21,7 @@ spec:
     controllers:
       barman-cloud:
         containers:
-          barman-cloud:
+          app:
             image:
               repository: ghcr.io/cloudnative-pg/plugin-barman-cloud
               tag: v0.6.0@sha256:2adabf02728307119a22c13abb9efc52371ad6d74106db6204c6dee5abe75fb8
