--- a/kubernetes/apps/database/pgadmin/app/externalsecret.yaml
+++ b/kubernetes/apps/database/pgadmin/app/externalsecret.yaml
@@ -3,13 +3,13 @@
 apiVersion: external-secrets.io/v1
 kind: ExternalSecret
 metadata:
-  name: &name pgadmin
+  name: pgadmin
 spec:
   secretStoreRef:
     kind: ClusterSecretStore
     name: onepassword
   target:
-    name: *name
+    name: pgadmin-secret
     template:
       data:
         PGADMIN_DEFAULT_EMAIL: "{{ .PGADMIN_DEFAULT_EMAIL }}"
