--- a/kubernetes/apps/database/postgres-backup/app/externalsecret.yaml
+++ b/kubernetes/apps/database/postgres-backup/app/externalsecret.yaml
@@ -3,13 +3,13 @@
 apiVersion: external-secrets.io/v1
 kind: ExternalSecret
 metadata:
-  name: &name postgres-backup
+  name: postgres-backup
 spec:
   secretStoreRef:
     kind: ClusterSecretStore
     name: onepassword
   target:
-    name: *name
+    name: postgres-backup-secret
     template:
       data:
         POSTGRES_USER: "{{ .POSTGRES_SUPER_USER }}"
