--- a/kubernetes/apps/downloads/pinchflat/app/helmrelease.yaml
+++ b/kubernetes/apps/downloads/pinchflat/app/helmrelease.yaml
@@ -3,7 +3,7 @@
 apiVersion: helm.toolkit.fluxcd.io/v2
 kind: HelmRelease
 metadata:
-  name: &app pinchflat
+  name: pinchflat
 spec:
   interval: 1h
   chartRef:
@@ -22,7 +22,7 @@ spec:
         annotations:
           reloader.stakater.com/auto: "true"
         containers:
-          pinchflat:
+          app:
             image:
               repository: ghcr.io/kieraneglin/pinchflat
               tag: v2025.6.6@sha256:4e975edf58f0861a5cbfe8fc6aac4851ff5a02dfc3f05ffeea4982e3084a5a4a
@@ -61,7 +61,6 @@ spec:
         fsGroupChangePolicy: OnRootMismatch
     service:
       app:
-        controller: *app
         ports:
           http:
             port: *port
@@ -89,7 +88,7 @@ spec:
               - *host
     persistence:
       config:
-        existingClaim: ${VOLSYNC_CLAIM}
+        existingClaim: "{{ .Release.Name }}"
       tmp:
         type: emptyDir
       yt-dlp:
