--- a/kubernetes/apps/database/postgres-backup/app/helmrelease.yaml
+++ b/kubernetes/apps/database/postgres-backup/app/helmrelease.yaml
@@ -3,7 +3,7 @@
 apiVersion: helm.toolkit.fluxcd.io/v2
 kind: HelmRelease
 metadata:
-  name: &app postgres-backup
+  name: postgres-backup
 spec:
   interval: 1h
   chartRef:
@@ -28,13 +28,13 @@ spec:
           successfulJobsHistory: 1
           failedJobsHistory: 1
         containers:
-          pg17-cluster-backup:
+          app:
             image:
               repository: docker.io/prodrigestivill/postgres-backup-local
               tag: 17@sha256:483fa15ecd998302bd312fc380cb1b3683a940881d9099d6dfe65bcc1e2714e8
             envFrom: &envFrom
               - secretRef:
-                  name: *app
+                  name: "{{ .Release.Name }}-secret"
             env:
               TZ: *tz
               POSTGRES_HOST: pg17-cluster-ro.database.svc.cluster.local
@@ -52,7 +52,7 @@ spec:
         type: cronjob
         cronjob: *cronjob
         containers:
-          pg17-immich-backup:
+          app:
             image:
               repository: docker.io/prodrigestivill/postgres-backup-local
               tag: 17@sha256:483fa15ecd998302bd312fc380cb1b3683a940881d9099d6dfe65bcc1e2714e8
@@ -75,7 +75,6 @@ spec:
         fsGroupChangePolicy: OnRootMismatch
     service:
       app:
-        controller: *app
         enabled: false
     persistence:
       backups:
