--- a/kubernetes/apps/games/romm/app/externalsecret.yaml
+++ b/kubernetes/apps/games/romm/app/externalsecret.yaml
@@ -3,13 +3,13 @@
 apiVersion: external-secrets.io/v1
 kind: ExternalSecret
 metadata:
-  name: &name romm
+  name: romm
 spec:
   secretStoreRef:
     kind: ClusterSecretStore
     name: onepassword
   target:
-    name: *name
+    name: romm-secret
     template:
       data:
         ## RomM
