--- a/kubernetes/apps/games/romm/app/kustomization.yaml
+++ b/kubernetes/apps/games/romm/app/kustomization.yaml
@@ -6,7 +6,7 @@ resources:
   - ./externalsecret.yaml
   - ./helmrelease.yaml
 configMapGenerator:
-  - name: romm-config
+  - name: romm-configmap
     files:
       - config.yml=./resources/config.yml
 generatorOptions:
