--- a/kubernetes/apps/database/cloudnative-pg/cluster/externalsecret.yaml
+++ b/kubernetes/apps/database/cloudnative-pg/cluster/externalsecret.yaml
@@ -3,13 +3,13 @@
 apiVersion: external-secrets.io/v1
 kind: ExternalSecret
 metadata:
-  name: &name cloudnative-pg
+  name: cloudnative-pg
 spec:
   secretStoreRef:
     kind: ClusterSecretStore
     name: onepassword
   target:
-    name: *name
+    name: cloudnative-pg-secret
     template:
       data:
         username: "{{ .POSTGRES_SUPER_USER }}"
