--- a/kubernetes/apps/database/dragonfly/cluster/externalsecret.yaml
+++ b/kubernetes/apps/database/dragonfly/cluster/externalsecret.yaml
@@ -8,8 +8,11 @@ spec:
   secretStoreRef:
     kind: ClusterSecretStore
     name: onepassword
-  data:
-    - secretKey: password
-      remoteRef:
+  target:
+    name: dragonfly-secret
+    template:
+      data:
+        password: "{{ .DRAGONFLY_PASSWORD }}"
+  dataFrom:
+    - extract:
         key: dragonfly
-        property: DRAGONFLY_PASSWORD
