--- a/kubernetes/apps/network/ingress-nginx/external/externalsecret.yaml
+++ b/kubernetes/apps/network/ingress-nginx/external/externalsecret.yaml
@@ -3,13 +3,13 @@
 apiVersion: external-secrets.io/v1
 kind: ExternalSecret
 metadata:
-  name: &name ingress-nginx-external
+  name: ingress-nginx-external
 spec:
   secretStoreRef:
     kind: ClusterSecretStore
     name: onepassword
   target:
-    name: *name
+    name: ingress-nginx-external-secret
     template:
       data:
         MAXMIND_LICENSE_KEY: "{{ .MAXMIND_LICENSE_KEY }}"
