--- a/kubernetes/apps/network/tailscale-operator/app/externalsecret.yaml
+++ b/kubernetes/apps/network/tailscale-operator/app/externalsecret.yaml
@@ -3,13 +3,13 @@
 apiVersion: external-secrets.io/v1
 kind: ExternalSecret
 metadata:
-  name: &name tailscale-operator
+  name: tailscale-operator
 spec:
   secretStoreRef:
     kind: ClusterSecretStore
     name: onepassword
   target:
-    name: *name
+    name: tailscale-operator-secret
     template:
       data:
         client_id: "{{ .TAILSCALE_CLIENT_ID }}"
