--- a/kubernetes/apps/flux-system/flux-instance/app/receiver.yaml
+++ b/kubernetes/apps/flux-system/flux-instance/app/receiver.yaml
@@ -8,7 +8,7 @@ spec:
   type: github
   events: ["ping", "push"]
   secretRef:
-    name: github-webhook-token
+    name: github-webhook-token-secret
   resources:
     - kind: GitRepository
       name: flux-system
