--- a/kubernetes/apps/network/external-dns/cloudflare/externalsecret.yaml
+++ b/kubernetes/apps/network/external-dns/cloudflare/externalsecret.yaml
@@ -3,14 +3,13 @@
 apiVersion: external-secrets.io/v1
 kind: ExternalSecret
 metadata:
-  name: &name external-dns-cloudflare
+  name: external-dns-cloudflare
 spec:
   secretStoreRef:
     kind: ClusterSecretStore
     name: onepassword
   target:
-    name: *name
-    creationPolicy: Owner
+    name: external-dns-cloudflare-secret
     template:
       data:
         CF_API_TOKEN: "{{ .CLOUDFLARE_DNS_TOKEN }}"
