--- a/kubernetes/apps/network/external-dns/cloudflare/helmrelease.yaml
+++ b/kubernetes/apps/network/external-dns/cloudflare/helmrelease.yaml
@@ -43,12 +43,12 @@ spec:
       - name: &name CF_API_TOKEN
         valueFrom:
           secretKeyRef:
-            name: *app
+            name: &secret external-dns-cloudflare-secret
             key: *name
       - name: &name CF_ZONE_ID
         valueFrom:
           secretKeyRef:
-            name: *app
+            name: *secret
             key: *name
     extraArgs:
       - --cloudflare-dns-records-per-page=1000
@@ -73,4 +73,4 @@ spec:
     serviceMonitor:
       enabled: true
     podAnnotations:
-      secret.reloader.stakater.com/reload: *app
+      secret.reloader.stakater.com/reload: *secret
