--- a/kubernetes/apps/network/external-dns/unifi/externalsecret.yaml
+++ b/kubernetes/apps/network/external-dns/unifi/externalsecret.yaml
@@ -3,14 +3,13 @@
 apiVersion: external-secrets.io/v1
 kind: ExternalSecret
 metadata:
-  name: &name external-dns-unifi
+  name: external-dns-unifi
 spec:
   secretStoreRef:
     kind: ClusterSecretStore
     name: onepassword
   target:
-    name: *name
-    creationPolicy: Owner
+    name: external-dns-unifi-secret
     template:
       data:
         UNIFI_API_KEY: "{{ .UNIFI_API_KEY }}"
