--- a/kubernetes/apps/network/tailscale-operator/app/helmrelease.yaml
+++ b/kubernetes/apps/network/tailscale-operator/app/helmrelease.yaml
@@ -42,10 +42,10 @@ spec:
       mode: "true"
     oauthSecretVolume:
       secret:
-        secretName: *app
+        secretName: &secret tailscale-operator-secret
     operatorConfig:
       defaultTags:
         - "tag:k8s-operator"
       hostname: *app
       podAnnotations:
-        secret.reloader.stakater.com/reload: *app
+        secret.reloader.stakater.com/reload: *secret
