--- a/kubernetes/apps/observability/grafana/app/helmrelease.yaml
+++ b/kubernetes/apps/observability/grafana/app/helmrelease.yaml
@@ -17,7 +17,7 @@ spec:
 apiVersion: helm.toolkit.fluxcd.io/v2
 kind: HelmRelease
 metadata:
-  name: &app grafana
+  name: grafana
 spec:
   interval: 1h
   chartRef:
@@ -32,13 +32,13 @@ spec:
       retries: 3
   values:
     annotations:
-      secret.reloader.stakater.com/reload: *app
+      secret.reloader.stakater.com/reload: &secret grafana-secret
     extraInitContainers:
       - name: 01-init-db
         image: ghcr.io/home-operations/postgres-init:17
         envFrom:
           - secretRef:
-              name: *app
+              name: *secret
     env:
       GF_DATE_FORMATS_USE_BROWSER_LOCALE: true
       GF_EXPLORE_ENABLED: true
@@ -46,9 +46,9 @@ spec:
       GF_SECURITY_ANGULAR_SUPPORT_ENABLED: true
       GF_SECURITY_DISABLE_INITIAL_ADMIN_CREATION: true
     envFromSecrets:
-      - name: *app
+      - name: *secret
     admin:
-      existingSecret: *app
+      existingSecret: *secret
       userKey: adminUser
       passwordKey: adminPass
     grafana.ini:
