--- a/kubernetes/apps/security/authentik/app/helmrelease.yaml
+++ b/kubernetes/apps/security/authentik/app/helmrelease.yaml
@@ -17,7 +17,7 @@ spec:
 apiVersion: helm.toolkit.fluxcd.io/v2
 kind: HelmRelease
 metadata:
-  name: &app authentik
+  name: authentik
 spec:
   interval: 1h
   chartRef:
@@ -33,10 +33,10 @@ spec:
   values:
     global:
       deploymentAnnotations:
-        secret.reloader.stakater.com/reload: *app
+        secret.reloader.stakater.com/reload: &secret authentik-secret
       envFrom:
         - secretRef:
-            name: *app
+            name: *secret
     authentik:
       log_level: info
       error_reporting:
@@ -49,7 +49,7 @@ spec:
           image: ghcr.io/home-operations/postgres-init:17
           envFrom:
             - secretRef:
-                name: *app
+                name: *secret
       ingress:
         enabled: true
         ingressClassName: internal
