--- a/kubernetes/apps/self-hosted/nextcloud/app/helmrelease.yaml
+++ b/kubernetes/apps/self-hosted/nextcloud/app/helmrelease.yaml
@@ -33,7 +33,7 @@ spec:
   values:
     fullnameOverride: *app
     deploymentAnnotations:
-      secret.reloader.stakater.com/reload: *app
+      secret.reloader.stakater.com/reload: &secret nextcloud-secret
     image:
       repository: public.ecr.aws/docker/library/nextcloud
       tag: 31.0.8-fpm-alpine
@@ -46,7 +46,7 @@ spec:
       database: nextcloud
       existingSecret:
         enabled: true
-        secretName: *app
+        secretName: *secret
         hostKey: POSTGRES_HOST
         databaseKey: POSTGRES_DB
         usernameKey: POSTGRES_USER
@@ -69,7 +69,7 @@ spec:
         - name: REDIS_HOST_PASSWORD
           valueFrom:
             secretKeyRef:
-              name: *app
+              name: *secret
               key: REDIS_HOST_PASSWORD
         - name: TZ
           value: "${CONFIG_TIMEZONE}"
@@ -78,10 +78,10 @@ spec:
           image: ghcr.io/home-operations/postgres-init:17
           envFrom:
             - secretRef:
-                name: *app
+                name: *secret
       existingSecret:
         enabled: true
-        secretName: *app
+        secretName: *secret
         usernameKey: NEXTCLOUD_ADMIN_USER
         passwordKey: NEXTCLOUD_ADMIN_PASSWORD
         tokenKey: NEXTCLOUD_METRICS_TOKEN
@@ -217,7 +217,7 @@ spec:
             value: "collabora.${SECRET_DOMAIN}"
         existingSecret:
           enabled: true
-          secretName: *app
+          secretName: *secret
           usernameKey: COLLABORA_USERNAME
           passwordKey: COLLABORA_PASSWORD
       grafana:
