--- a/kubernetes/components/common/alerts/github-status/externalsecret.yaml
+++ b/kubernetes/components/common/alerts/github-status/externalsecret.yaml
@@ -3,13 +3,13 @@
 apiVersion: external-secrets.io/v1
 kind: ExternalSecret
 metadata:
-  name: &name github-status-token
+  name: github-status-token
 spec:
   secretStoreRef:
     kind: ClusterSecretStore
     name: onepassword
   target:
-    name: *name
+    name: github-status-token-secret
     template:
       data:
         token: "{{ .FLUX_GITHUB_TOKEN }}"
