--- a/kubernetes/components/common/alerts/github-status/provider.yaml
+++ b/kubernetes/components/common/alerts/github-status/provider.yaml
@@ -8,4 +8,4 @@ spec:
   type: github
   address: https://github.com/pwyde/home-ops
   secretRef:
-    name: github-status-token
+    name: github-status-token-secret
