--- a/kubernetes/apps/observability/alloy/app/kustomization.yaml
+++ b/kubernetes/apps/observability/alloy/app/kustomization.yaml
@@ -5,7 +5,7 @@ kind: Kustomization
 resources:
   - ./helmrelease.yaml
 configMapGenerator:
-  - name: alloy-config
+  - name: alloy-configmap
     files:
       - config.alloy=./resources/config.alloy
 generatorOptions:
