chore(cnpg): set isWALArchiver to true on pg17-immich cluster

--- a/kubernetes/apps/database/cloudnative-pg/cluster/cluster.yaml
+++ b/kubernetes/apps/database/cloudnative-pg/cluster/cluster.yaml
@@ -64,7 +64,7 @@ spec:
     enablePodMonitor: true
   plugins:
     - enabled: true
-      isWALArchiver: false
+      isWALArchiver: true
       name: barman-cloud.cloudnative-pg.io
       parameters: &parameters
         barmanObjectName: minio
