--- a/kubernetes/apps/games/romm/app/helmrelease.yaml
+++ b/kubernetes/apps/games/romm/app/helmrelease.yaml
@@ -86,7 +86,8 @@ spec:
       app:
         ports:
           http:
-            port: *port
+            # port: *port
+            port: 8080
     ingress:
       app:
         className: internal
