--- a/kubernetes/apps/self-hosted/dokuwiki/app/helmrelease.yaml
+++ b/kubernetes/apps/self-hosted/dokuwiki/app/helmrelease.yaml
@@ -23,7 +23,7 @@ spec:
           app:
             image:
               repository: ghcr.io/dokuwiki/dokuwiki
-              tag: 2025-05-14@sha256:d93e229c771467ab5b27b8870a10bc733aa471285444f958962e88537e54d752
+              tag: 2025-05-14a@sha256:e064fa6519d02df67ac34ed64d04e84fee572cb8ddc5fc1d000c919bed23c333
             env:
               PHP_TIMEZONE: ${CONFIG_TIMEZONE}
             probes:
