--- a/kubernetes/apps/games/romm/app/helmrelease.yaml
+++ b/kubernetes/apps/games/romm/app/helmrelease.yaml
@@ -51,19 +51,19 @@ spec:
               REDIS_PORT: 6379
               REDIS_DB: 6
             envFrom: *envFrom
-           # probes:
-           #   liveness: &probes
-           #     enabled: true
-           #     custom: true
-           #     spec:
-           #       httpGet:
-           #         path: /
-           #         port: &port 8080
-           #       initialDelaySeconds: 0
-           #       periodSeconds: 10
-           #       timeoutSeconds: 1
-           #       failureThreshold: 3
-           #   readiness: *probes
+            probes:
+              liveness: &probes
+                enabled: true
+                custom: true
+                spec:
+                  httpGet:
+                    path: /
+                    port: &port 8080
+                  initialDelaySeconds: 0
+                  periodSeconds: 10
+                  timeoutSeconds: 1
+                  failureThreshold: 3
+              readiness: *probes
             resources:
               requests:
                 cpu: 100m
@@ -86,8 +86,7 @@ spec:
       app:
         ports:
           http:
-            # port: *port
-            port: 8080
+            port: *port
     ingress:
       app:
         className: internal
