--- a/kubernetes/apps/observability/gatus/app/prometheusrule.yaml
+++ b/kubernetes/apps/observability/gatus/app/prometheusrule.yaml
@@ -12,7 +12,7 @@ spec:
           annotations:
             summary: >-
               The {{ $labels.name }} endpoint is down
-          expr: |
+          expr: |-
             gatus_results_endpoint_success{group="external"} == 0
           for: 5m
           labels:
@@ -22,7 +22,7 @@ spec:
           annotations:
             summary: >-
               The {{ $labels.name }} endpoint has a public DNS record and is exposed
-          expr: |
+          expr: |-
             gatus_results_endpoint_success{group="guarded"} == 0
           for: 5m
           labels:
