--- a/kubernetes/apps/flux-system/flux-instance/app/prometheusrule.yaml
+++ b/kubernetes/apps/flux-system/flux-instance/app/prometheusrule.yaml
@@ -12,7 +12,7 @@ spec:
           annotations:
             summary: >-
               Flux instance metric is missing
-          expr: |
+          expr: |-
             absent(flux_instance_info{exported_namespace="flux-system", name="flux"})
           for: 5m
           labels:
@@ -22,7 +22,7 @@ spec:
           annotations:
             summary: >-
               Flux instance {{ $labels.name }} is not ready
-          expr: |
+          expr: |-
             flux_instance_info{exported_namespace="flux-system", name="flux", ready!="True"}
           for: 5m
           labels:
