--- a/kubernetes/apps/network/external-dns/cloudflare/prometheusrule.yaml
+++ b/kubernetes/apps/network/external-dns/cloudflare/prometheusrule.yaml
@@ -12,7 +12,7 @@ spec:
           annotations:
             summary: >-
               ExternalDNS {{ $labels.job }} has not synced successfully in the last five minutes
-          expr: |
+          expr: |-
             time() - external_dns_controller_last_sync_timestamp_seconds > 60
           for: 5m
           labels:
