--- a/kubernetes/apps/observability/exporters/blackbox-exporter/app/prometheusrule.yaml
+++ b/kubernetes/apps/observability/exporters/blackbox-exporter/app/prometheusrule.yaml
@@ -12,7 +12,7 @@ spec:
           annotations:
             summary: >-
               The host {{ $labels.instance }} is down
-          expr: |
+          expr: |-
             probe_success == 0
           for: 5m
           labels:
@@ -20,9 +20,9 @@ spec:
 
         - alert: BlackboxSslCertificateWillExpireSoon
           annotations:
-            summary: |-
+            summary: >-
               The SSL certificate for {{ $labels.target }} will expire in less than 3 days
-          expr: |
+          expr: |-
             probe_ssl_earliest_cert_expiry - time() < 86400 * 3
           for: 15m
           labels:
@@ -30,9 +30,9 @@ spec:
 
         - alert: BlackboxSslCertificateExpired
           annotations:
-            summary: |-
+            summary: >-
               The SSL certificate for {{ $labels.target }} has expired
-          expr: |
+          expr: |-
             probe_ssl_earliest_cert_expiry - time() <= 0
           for: 15m
           labels:
