--- a/kubernetes/apps/observability/exporters/lidarr-exporter/app/prometheusrule.yaml
+++ b/kubernetes/apps/observability/exporters/lidarr-exporter/app/prometheusrule.yaml
@@ -12,7 +12,7 @@ spec:
           annotations:
             summary: >-
               Lidarr may have items stuck in the queue (instance {{ $labels.instance }})
-          expr: |
+          expr: |-
             lidarr_queue_total AND changes(lidarr_queue_total[1h]) == 0
           for: 4h
           labels:
