--- a/kubernetes/apps/observability/exporters/radarr-exporter/app/prometheusrule.yaml
+++ b/kubernetes/apps/observability/exporters/radarr-exporter/app/prometheusrule.yaml
@@ -13,7 +13,7 @@ spec:
           annotations:
             summary: >-
               Radarr may have items stuck in the queue (instance {{ $labels.instance }})
-          expr: |
+          expr: |-
             radarr_queue_total AND changes(radarr_queue_total[1h]) == 0
           for: 4h
           labels:
