--- a/kubernetes/apps/observability/kube-prometheus-stack/app/prometheusrule.yaml
+++ b/kubernetes/apps/observability/kube-prometheus-stack/app/prometheusrule.yaml
@@ -11,7 +11,7 @@ spec:
         - alert: DockerhubRateLimitRisk
           annotations:
             summary: Kubernetes cluster Dockerhub rate limit risk
-          expr: |
+          expr: |-
             count(time() - container_last_seen{image=~"(docker.io).*",container!=""} < 30) > 100
           labels:
             severity: critical
@@ -19,7 +19,7 @@ spec:
         - alert: OomKilled
           annotations:
             summary: Container {{ $labels.container }} in pod {{ $labels.namespace }}/{{ $labels.pod }} has been OOMKilled {{ $value }} times in the last 10 minutes
-          expr: |
+          expr: |-
             (kube_pod_container_status_restarts_total - kube_pod_container_status_restarts_total offset 10m >= 1) and ignoring (reason) min_over_time(kube_pod_container_status_last_terminated_reason{reason="OOMKilled"}[10m]) == 1
           labels:
             severity: critical
@@ -37,7 +37,7 @@ spec:
           annotations:
             summary: >-
               Mounted drive {{ $labels.device }} on device {{ $labels.instance }} has a temperature higher than 65°C
-          expr: |
+          expr: |-
             smartctl_device_temperature{temperature_type="current"} > 65
           for: 5m
           labels:
@@ -47,7 +47,7 @@ spec:
           annotations:
             summary: >-
               Mounted drive {{ $labels.device }} on device {{ $labels.instance }} did not pass its SMART test
-          expr: |
+          expr: |-
             (smartctl_device_smart_status != 1 or smartctl_device_status != 1)
           for: 5m
           labels:
@@ -57,7 +57,7 @@ spec:
           annotations:
             summary: >-
               Mounted drive {{ $labels.device }} on device {{ $labels.instance }} is in a critical state
-          expr: |
+          expr: |-
             smartctl_device_critical_warning != 0
           for: 5m
           labels:
@@ -67,7 +67,7 @@ spec:
           annotations:
             summary: >-
               Mounted drive {{ $labels.device }} on device {{ $labels.instance }} has media errors
-          expr: |
+          expr: |-
             smartctl_device_media_errors != 0
           for: 5m
           labels:
@@ -77,7 +77,7 @@ spec:
           annotations:
             summary: >-
               Device {{ $labels.device }} on instance {{ $labels.instance }} is under available spare threashold
-          expr: |
+          expr: |-
             smartctl_device_available_spare_threshold > smartctl_device_available_spare
           for: 5m
           labels:
@@ -87,7 +87,7 @@ spec:
           annotations:
             summary: >-
               Device {{ $labels.device }} on instance {{ $labels.instance }} interface is slower then it should be
-          expr: |
+          expr: |-
             smartctl_device_interface_speed{speed_type="current"} != on(device, instance, namespace, pod) smartctl_device_interface_speed{speed_type="max"}
           for: 5m
           labels:
