--- a/kubernetes/apps/security/cert-manager/app/prometheusrule.yaml
+++ b/kubernetes/apps/security/cert-manager/app/prometheusrule.yaml
@@ -12,7 +12,7 @@ spec:
           annotations:
             summary: >-
               Cert-Manager has dissapeared from Prometheus service discovery
-          expr: |
+          expr: |-
             absent(up{job="cert-manager"})
           for: 5m
           labels:
@@ -24,7 +24,7 @@ spec:
           annotations:
             summary: >-
               The cert {{ $labels.name }} is {{ $value | humanizeDuration }} from expiry, it should have renewed over a week ago
-          expr: |
+          expr: |-
             avg by (exported_namespace, namespace, name) (certmanager_certificate_expiration_timestamp_seconds - time()) < (21 * 24 * 3600)
           for: 5m
           labels:
@@ -34,7 +34,7 @@ spec:
           annotations:
             summary: >-
               The cert {{ $labels.name }} is not ready to serve traffic
-          expr: |
+          expr: |-
             max by (name, exported_namespace, namespace, condition) (certmanager_certificate_ready_status{condition!="True"} == 1)
           for: 5m
           labels:
@@ -44,7 +44,7 @@ spec:
           annotations:
             summary: >-
               Cert-Manager hitting LetsEncrypt rate limits
-          expr: |
+          expr: |-
             sum by (host) (rate(certmanager_http_acme_client_request_count{status="429"}[5m])) > 0
           for: 5m
           labels:
